contrast accessibility fixes

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -56,7 +56,7 @@ nav {
 
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    background: #f2a0d8;
+    background: #c57faf;
     color: white;
     display: grid;
 
@@ -147,7 +147,7 @@ footer {
     width: 25%;
     padding: 0.5em 1.2em;
     cursor: pointer;
-    background: gray;
+    background: black;
     color: white;
     font-weight: bold;
     font-size: 1rem;
@@ -443,6 +443,9 @@ footer {
     height: 100px;
     width: 150px;
     border: 1px solid gray;
+    border-radius: 5px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .film_library_item_title {
